--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,24 @@
 		{
 			"label": "Build",
 			"type": "shell",
-			"command": "${userHome}\\.platformio\\penv\\Scripts\\platformio.exe",
+			"command": "${userHome}/.platformio/penv/bin/platformio",
 			"args": ["run", "-e", "heltec_wifi_lora_32_V4"],
+			"problemMatcher": [],
+			"group": "build"
+		},
+		{
+			"label": "Upload",
+			"type": "shell",
+			"command": "${userHome}/.platformio/penv/bin/platformio",
+			"args": ["run", "-e", "heltec_wifi_lora_32_V4", "-t", "upload"],
+			"problemMatcher": [],
+			"group": "build"
+		},
+		{
+			"label": "Clean",
+			"type": "shell",
+			"command": "${userHome}/.platformio/penv/bin/platformio",
+			"args": ["run", "-e", "heltec_wifi_lora_32_V4", "-t", "clean"],
 			"problemMatcher": [],
 			"group": "build"
 		}
