--- a/platformio.ini
+++ b/platformio.ini
@@ -26,8 +26,9 @@ build_flags =
 	-DBOARD_HAS_PSRAM
 	-DHELTEC_V4
 	-DGNSS_ENABLE=1
-	-DCORE_DEBUG_LEVEL=0
+	-DCORE_DEBUG_LEVEL=5
 	-DFIRMWARE_VERSION=\"1.0.0\"
 	-DOTA_ENABLED=1
-	-DKISS_SERIAL_MODE=1
+	-DKISS_SERIAL_MODE=0
+build_type = debug
 
