Revamp LoRaTNCX project with complete repository reset, RadioLib 7.4.0 integration, and enhanced hardware configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 board_build.partitions = default_16MB.csv
 monitor_speed = 115200
 upload_speed = 921600
+lib_deps = 
+    jgromes/RadioLib @ ^7.4.0
