--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,32 @@
 
 [env:heltec_wifi_lora_32_V4]
 platform = espressif32
-board = heltec_wifi_lora_32_V4
+board = heltec_wifi_lora_32_V3  ; Using V3 profile for V4 hardware compatibility
 framework = arduino
+
+; Custom board configuration for V4 hardware
 board_build.partitions = default_16MB.csv
+board_build.arduino.ldscript = esp32s3_out.ld
+board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
+
+; Build flags for V4 board
+build_flags = 
+    -DARDUINO_heltec_wifi_lora_32_V4
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_RUNNING_CORE=1
+    -DARDUINO_EVENT_RUNNING_CORE=1
+    -DBOARD_HAS_PSRAM
+
+; Upload configuration
+upload_speed = 460800
 monitor_speed = 115200
-upload_speed = 921600
+
+; Libraries
 lib_deps = 
-    jgromes/RadioLib @ ^7.4.0
+    jgromes/RadioLib @ ^6.6.0
+
+; Additional directories
+board_build.extra_dirs = boards
