Implement TNC Manager, LoRa Radio, KISS Protocol, and Configuration Manager for LoRaTNCX project
- Added TNCManager class to coordinate KISS protocol and LoRa radio operations.
- Implemented ConfigurationManager for managing LoRa configurations with presets and custom settings.
- Developed KISSProtocol for handling KISS frames and commands.
- Created LoRaRadio interface for managing LoRa communication, including transmission and reception.
- Added detailed logging for initialization, configuration, and status reporting.
- Implemented error handling and validation for configuration parameters.
- Established methods for processing incoming data and transmitting packets over LoRa.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,20 +10,12 @@
 
 [env:heltec_wifi_lora_32_V4]
 platform = espressif32
-board = esp32-s3-devkitc-1  ; Use generic ESP32-S3 board
+board = heltec_wifi_lora_32_V4  ; Use our custom board definition
 framework = arduino
 
-; Custom board configuration for V4 hardware
-board_build.flash_size = 16MB
-board_build.f_cpu = 240000000L
-board_build.f_flash = 80000000L
-board_build.flash_mode = qio
-
-; Build flags for V4 board
+; Additional build flags if needed
 build_flags = 
-    -DARDUINO_USB_MODE=1
-    -DARDUINO_USB_CDC_ON_BOOT=1
-    -DBOARD_HAS_PSRAM
+    ; Custom board definition already includes required flags
 
 ; Upload configuration
 upload_speed = 115200
