--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,6 @@ monitor_speed = 115200
 build_flags = 
     -Iinclude
 
-lib_deps = 
+lib_deps =
     jgromes/RadioLib @ ^6.6.0
+    olikraus/U8g2 @ ^2.35.19
