--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,6 @@ build_flags =
 lib_deps =
     jgromes/RadioLib @ ^6.6.0
     olikraus/U8g2 @ ^2.35.19
+    ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
+    esphome/AsyncTCP-esphome @ ^2.1.4
+    bblanchon/ArduinoJson @ ^7.0.4
