Refactor code structure for improved readability and maintainability

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,13 @@ monitor_speed = 115200
 
 build_flags = 
     -Iinclude
+    -DCONFIG_SPIFFS_MAX_PARTITIONS=3
+    -DCONFIG_SPIFFS_CACHE=1
+    -DCONFIG_SPIFFS_CACHE_WR=1
+    -DCONFIG_SPIFFS_PAGE_CHECK=1
+
+board_build.filesystem = spiffs
+board_build.partitions = default_16MB.csv
 
 lib_deps =
     jgromes/RadioLib @ ^6.6.0
