Implement theme switcher, WiFi manager, and web server manager for LoRaTNCX
- Added ThemeSwitcher class for managing light/dark themes with browser preference detection.
- Introduced SimpleWiFiManager class for robust WiFi management, including network handling and state transitions.
- Created WebServerManager class for asynchronous web server management, integrating with WiFi state and providing API endpoints.
- Implemented SPIFFS for serving web files and handling static content.
- Added JSON API responses for system and LoRa status, WiFi networks management, and debugging.

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,6 @@ build_flags =
 lib_deps =
     jgromes/RadioLib @ ^6.6.0
     olikraus/U8g2 @ ^2.35.19
+    ESP32Async/ESPAsyncWebServer @ ^3.8.1
+    ESP32Async/AsyncTCP @ ^3.4.9
+    bblanchon/ArduinoJson @ ^7.2.1
