--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:heltec_wifi_lora_32_V3]
 platform = espressif32
-board = esp32dev
+board = heltec_wifi_lora_32_V3
 framework = arduino
+board_build.variants_dir = variants
+
+[env:heltec_wifi_lora_32_V4]
+platform = espressif32
+board = heltec_wifi_lora_32_V4
+framework = arduino
+board_build.variants_dir = variants
