Refactor main.cpp to enhance serial console output and command processing; add monitor speed configuration for Heltec boards

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,11 @@ platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
 board_build.variants_dir = variants
+monitor_speed = 115200
 
 [env:heltec_wifi_lora_32_V4]
 platform = espressif32
 board = heltec_wifi_lora_32_V4
 framework = arduino
 board_build.variants_dir = variants
+monitor_speed = 115200
