feat: Integrate RadioLib for LoRa communication and update build system
- Added tasks for building LoRaTNCX V3 and V4 environments in tasks.json
- Created CHANGELOG.md to document version 1.1 changes, including RadioLib integration and breaking changes
- Updated EXAMPLES.md with usage examples for basic and advanced communication
- Revised README.md to reflect new dependencies, hardware support, and build instructions
- Implemented LoRaRadio class in LoRaRadio.h and LoRaRadio.cpp for managing LoRa operations
- Enhanced configuration options and added power amplifier control for V4
- Improved error handling and statistics reporting in LoRaRadio class

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:heltec_wifi_lora_32_V3]
+[env]
+; Common configuration for all environments
 platform = espressif32
-board = heltec_wifi_lora_32_V3
 framework = arduino
 board_build.variants_dir = variants
 monitor_speed = 115200
+lib_deps = 
+    jgromes/RadioLib@^7.4.0
+
+[env:heltec_wifi_lora_32_V3]
+board = heltec_wifi_lora_32_V3
+build_flags = 
+    -DFREQ_BAND_868  ; Use 868 MHz band (863-928 MHz range, includes 915 MHz)
+
+[env:heltec_wifi_lora_32_V3_433]
+board = heltec_wifi_lora_32_V3
+build_flags = 
+    -DFREQ_BAND_433  ; Use 433 MHz band (433-510 MHz range)
 
 [env:heltec_wifi_lora_32_V4]
-platform = espressif32
 board = heltec_wifi_lora_32_V4
-framework = arduino
-board_build.variants_dir = variants
-monitor_speed = 115200
+build_flags = 
+    -DFREQ_BAND_868  ; Use 868 MHz band (863-928 MHz range, includes 915 MHz)
+
+[env:heltec_wifi_lora_32_V4_433]
+board = heltec_wifi_lora_32_V4
+build_flags = 
+    -DFREQ_BAND_433  ; Use 433 MHz band (433-510 MHz range)
