--- a/platformio.ini
+++ b/platformio.ini
@@ -16,23 +16,12 @@ board_build.variants_dir = variants
 monitor_speed = 115200
 lib_deps = 
     jgromes/RadioLib@^7.4.0
+    bblanchon/ArduinoJson@^7.2.0
 
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
-build_flags = 
-    -DFREQ_BAND_868  ; Use 868 MHz band (863-928 MHz range, includes 915 MHz)
-
-[env:heltec_wifi_lora_32_V3_433]
-board = heltec_wifi_lora_32_V3
-build_flags = 
-    -DFREQ_BAND_433  ; Use 433 MHz band (433-510 MHz range)
+board_build.filesystem = spiffs
 
 [env:heltec_wifi_lora_32_V4]
 board = heltec_wifi_lora_32_V4
-build_flags = 
-    -DFREQ_BAND_868  ; Use 868 MHz band (863-928 MHz range, includes 915 MHz)
-
-[env:heltec_wifi_lora_32_V4_433]
-board = heltec_wifi_lora_32_V4
-build_flags = 
-    -DFREQ_BAND_433  ; Use 433 MHz band (433-510 MHz range)
+board_build.filesystem = spiffs
