Add LoRaTNCX firmware and support for Heltec WiFi LoRa 32 V3/V4 boards
- Implement AX.25 parsing and encoding in AX25.cpp and AX25.h
- Create CommandProcessor for handling serial commands
- Develop LoRaRadio class for interfacing with SX1262 using RadioLib
- Introduce LoRaTNCX class for managing TNC operations and settings
- Add test firmware for basic functionality (LED blinking and serial output)
- Update platformio.ini to include RadioLib dependency and test environments
- Document usage and expected output in README.md

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,3 +11,21 @@ board_build.filesystem = spiffs
 [env:heltec_wifi_lora_32_V4]
 board = heltec_wifi_lora_32_V4
 board_build.filesystem = spiffs
+
+; RadioLib is used for SX1262 support
+lib_deps = RadioLib@^7.4.0
+
+
+[env:heltec_wifi_lora_32_V3_test]
+board = heltec_wifi_lora_32_V3
+board_build.filesystem = spiffs
+; Build flag enables the test sketch which defines setup()/loop()
+build_flags = -DBUILD_LORA_TEST
+lib_deps = RadioLib@^7.4.0
+
+[env:heltec_wifi_lora_32_V4_test]
+board = heltec_wifi_lora_32_V4
+board_build.filesystem = spiffs
+; Build flag enables the test sketch which defines setup()/loop()
+build_flags = -DBUILD_LORA_TEST
+lib_deps = RadioLib@^7.4.0
