--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,20 @@ lib_deps = RadioLib@^7.4.0
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
 board_build.filesystem = spiffs
+build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V3
 
 [env:heltec_wifi_lora_32_V4]
 board = heltec_wifi_lora_32_V4
 board_build.filesystem = spiffs
+build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V4
+
+[env:freq_test_v3]
+board = heltec_wifi_lora_32_V3
+board_build.filesystem = spiffs
+build_src_filter = -<*> +<../test/frequency_test.cpp>
+
+[env:freq_test_v4]
+board = heltec_wifi_lora_32_V4
+board_build.filesystem = spiffs
+build_src_filter = -<*> +<../test/frequency_test.cpp>
+
