--- a/platformio.ini
+++ b/platformio.ini
@@ -3,7 +3,9 @@ platform = espressif32
 framework = arduino
 board_build.variants_dir = variants
 monitor_speed = 115200
-lib_deps = RadioLib@^7.4.0
+lib_deps = 
+    RadioLib@^7.4.0
+    olikraus/U8g2@^2.35.30
 
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
