refactor: enhance battery voltage measurement logic and add calibration support

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,25 @@ board = heltec_wifi_lora_32_V3
 board_build.filesystem = spiffs
 build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V3
 
+; ==================================================================================
+; For ORIGINAL V3 boards (pre-V3.2) with inverted battery voltage control logic
+; ==================================================================================
+; If you have an original V3 board (before V3.2 revision), the battery voltage
+; reading will be incorrect due to hardware changes in V3.2.
+; 
+; To fix this:
+; 1. Comment out the [env:heltec_wifi_lora_32_V3] section above
+; 2. Uncomment the section below
+; 3. Build and upload
+;
+; [env:heltec_wifi_lora_32_V3]
+; board = heltec_wifi_lora_32_V3
+; board_build.filesystem = spiffs
+; build_flags = 
+;     -DARDUINO_HELTEC_WIFI_LORA_32_V3
+;     -DV3_ORIGINAL_BATTERY_LOGIC
+; ==================================================================================
+
 [env:heltec_wifi_lora_32_V4]
 board = heltec_wifi_lora_32_V4
 board_build.filesystem = spiffs
