Add web server and WiFi manager implementation
- Implemented TNCWebServer class for handling web server functionalities including API routes for system status, LoRa configuration, and WiFi configuration.
- Added WiFiManager class to manage WiFi connections, configurations, and preferences.
- Introduced JSON serialization for configuration data and system information.
- Implemented methods for saving, loading, and applying WiFi configurations.
- Added support for handling CORS in web server responses.
- Integrated SPIFFS for serving static files.
- Established routes for rebooting the device and scanning available WiFi networks.

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,11 +6,19 @@ monitor_speed = 115200
 lib_deps = 
     RadioLib@^7.4.0
     olikraus/U8g2@^2.35.30
+    mathieucarbou/ESPAsyncWebServer@^3.6.0
+    bblanchon/ArduinoJson@^7.0.0
+build_flags = 
+    -DCONFIG_TASK_WDT_TIMEOUT_S=30
+    -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
+    -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
 
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
 board_build.filesystem = spiffs
-build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V3
+build_flags = 
+    ${env.build_flags}
+    -DARDUINO_HELTEC_WIFI_LORA_32_V3
 
 ; ==================================================================================
 ; For ORIGINAL V3 boards (pre-V3.2) with inverted battery voltage control logic
@@ -34,4 +42,6 @@ build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V3
 [env:heltec_wifi_lora_32_V4]
 board = heltec_wifi_lora_32_V4
 board_build.filesystem = spiffs
-build_flags = -DARDUINO_HELTEC_WIFI_LORA_32_V4
+build_flags = 
+    ${env.build_flags}
+    -DARDUINO_HELTEC_WIFI_LORA_32_V4
