--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@ lib_deps =
     olikraus/U8g2@^2.35.30
     mathieucarbou/ESPAsyncWebServer@^3.6.0
     bblanchon/ArduinoJson@^7.0.0
+    mikalhart/TinyGPSPlus@^1.1.0
 build_flags = 
     -DCONFIG_TASK_WDT_TIMEOUT_S=30
     -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
