--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ build_flags =
     -DCONFIG_TASK_WDT_TIMEOUT_S=30
     -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
+    -DFIRMWARE_BUILD_DATE_UTC="`date -u +%%Y%%m%%d`"
+    -DFIRMWARE_BUILD_TIME_UTC="`date -u +%%H%%M%%S`"
 
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
