--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,64 +36,21 @@ jobs:
               run: |
                   pio run -e heltec_wifi_lora_32_V4
                   pio run --target buildfs -e heltec_wifi_lora_32_V4
-            - name: Create web assets zip
-              run: cd web && zip -r ../web-assets.zip dist/
-            - name: Create release
-              id: create_release
-              uses: actions/create-release@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Create release and upload assets
+              uses: softprops/action-gh-release@v1
               with:
-                  tag_name: ${{ github.ref }}
-                  release_name: Release ${{ github.ref }}
-                  body: |
-                      Automated release for ${{ github.ref }}.
-                      - Firmware binaries and SPIFFS images for V3 and V4 attached.
-                      - Web assets included.
-                  draft: false
-                  prerelease: false
-            - name: Upload firmware V3
-              uses: actions/upload-release-asset@v1
+                tag_name: ${{ github.ref_name }}
+                name: Release ${{ github.ref_name }}
+                body: |
+                  Automated release for ${{ github.ref_name }}.
+                  - Firmware binaries and SPIFFS images for V3 and V4 attached.
+                  - Web interface included in SPIFFS.
+                draft: false
+                prerelease: false
+                files: |
+                  .pio/build/heltec_wifi_lora_32_V3/firmware.bin
+                  .pio/build/heltec_wifi_lora_32_V3/spiffs.bin
+                  .pio/build/heltec_wifi_lora_32_V4/firmware.bin
+                  .pio/build/heltec_wifi_lora_32_V4/spiffs.bin
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: .pio/build/heltec_wifi_lora_32_V3/firmware.bin
-                  asset_name: firmware-v3.bin
-                  asset_content_type: application/octet-stream
-            - name: Upload SPIFFS V3
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: .pio/build/heltec_wifi_lora_32_V3/spiffs.bin
-                  asset_name: spiffs-v3.bin
-                  asset_content_type: application/octet-stream
-            - name: Upload firmware V4
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: .pio/build/heltec_wifi_lora_32_V4/firmware.bin
-                  asset_name: firmware-v4.bin
-                  asset_content_type: application/octet-stream
-            - name: Upload SPIFFS V4
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: .pio/build/heltec_wifi_lora_32_V4/spiffs.bin
-                  asset_name: spiffs-v4.bin
-                  asset_content_type: application/octet-stream
-            - name: Upload web assets
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: web-assets.zip
-                  asset_name: web-assets.zip
-                  asset_content_type: application/zip
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
