code analysis run 1

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,7 @@ platform = espressif32
 framework = arduino
 board_build.variants_dir = variants
 monitor_speed = 115200
+extra_scripts = pre:build_date.py
 lib_deps = 
     RadioLib@^7.4.0
     olikraus/U8g2@^2.35.30
@@ -13,8 +14,6 @@ build_flags =
     -DCONFIG_TASK_WDT_TIMEOUT_S=30
     -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU0=0
     -DCONFIG_TASK_WDT_CHECK_IDLE_TASK_CPU1=0
-    -DFIRMWARE_BUILD_DATE_UTC="`date -u +%%Y%%m%%d`"
-    -DFIRMWARE_BUILD_TIME_UTC="`date -u +%%H%%M%%S`"
 
 [env:heltec_wifi_lora_32_V3]
 board = heltec_wifi_lora_32_V3
